[gd_scene load_steps=10 format=3 uid="uid://c4rfp681bhy0u"]

[ext_resource type="Texture2D" uid="uid://dbynnc5ljgv0r" path="res://assets/sprites/slime_green.png" id="1_hx3w1"]
[ext_resource type="Script" path="res://scripts/green_slime.gd" id="1_ny67q"]
[ext_resource type="PackedScene" uid="uid://ddob8ckbkg8e5" path="res://scenes/killzone.tscn" id="2_y6t2f"]

[sub_resource type="AtlasTexture" id="AtlasTexture_agq0c"]
atlas = ExtResource("1_hx3w1")
region = Rect2(0, 24, 24, 24)

[sub_resource type="AtlasTexture" id="AtlasTexture_hq0im"]
atlas = ExtResource("1_hx3w1")
region = Rect2(24, 24, 24, 24)

[sub_resource type="AtlasTexture" id="AtlasTexture_0a56l"]
atlas = ExtResource("1_hx3w1")
region = Rect2(48, 24, 24, 24)

[sub_resource type="AtlasTexture" id="AtlasTexture_mt3ee"]
atlas = ExtResource("1_hx3w1")
region = Rect2(72, 24, 24, 24)

[sub_resource type="SpriteFrames" id="SpriteFrames_8e5lm"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_agq0c")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_hq0im")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_0a56l")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_mt3ee")
}],
"loop": true,
"name": &"default",
"speed": 5.0
}]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_hhqao"]
size = Vector2(8, 10)

[node name="Green Slime" type="Node2D"]
script = ExtResource("1_ny67q")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
position = Vector2(0, -12)
sprite_frames = SubResource("SpriteFrames_8e5lm")

[node name="killzone" parent="." instance=ExtResource("2_y6t2f")]

[node name="CollisionShape2D" type="CollisionShape2D" parent="killzone"]
position = Vector2(0, -6)
shape = SubResource("RectangleShape2D_hhqao")

[node name="RayCastRight" type="RayCast2D" parent="."]
position = Vector2(0, -6)
target_position = Vector2(7, 0)

[node name="RayCastLeft" type="RayCast2D" parent="."]
position = Vector2(0, -6)
target_position = Vector2(-7, 0)

[node name="RayCastBottom" type="RayCast2D" parent="."]
position = Vector2(0, -6)
target_position = Vector2(0, 7)
